@@ -1,5 +1,6 @@
 ### v0.0.11
 1. add proxy for telegram and deepseek.
+2. add calculating token
 
 ### v0.0.10
 1. add thinking mode
